feat: migrate styles from CSS to SCSS, add Sass dependency, and update imports

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -163,7 +163,7 @@ button:focus-visible {
   &--secondary {
     box-shadow: var(--color-shadow) 0px 0px 0px 1px inset;
     background-color: transparent;
-    color: var(--color-text-secondary);
+    color: var(--color-text-dark);
   }
 
   &--small {
