--- a/src/styles/utilities/_responsive.scss
+++ b/src/styles/utilities/_responsive.scss
@@ -1,9 +1,10 @@
+@use 'sass:map';
 @use '../variables/breakpoints' as *;
 
 // Media query helper
 @mixin respond-to($breakpoint) {
-  @if map-has-key($breakpoints, $breakpoint) {
-    @media (min-width: map-get($breakpoints, $breakpoint)) {
+  @if map.has-key($breakpoints, $breakpoint) {
+    @media (min-width: map.get($breakpoints, $breakpoint)) {
       @content;
     }
   } @else {
@@ -13,8 +14,8 @@
 
 // Max-width media query
 @mixin respond-below($breakpoint) {
-  @if map-has-key($breakpoints, $breakpoint) {
-    @media (max-width: calc(map-get($breakpoints, $breakpoint) - 1px)) {
+  @if map.has-key($breakpoints, $breakpoint) {
+    @media (max-width: calc(map.get($breakpoints, $breakpoint) - 1px)) {
       @content;
     }
   } @else {
@@ -24,8 +25,8 @@
 
 // Between two breakpoints
 @mixin respond-between($lower, $upper) {
-  @if map-has-key($breakpoints, $lower) and map-has-key($breakpoints, $upper) {
-    @media (min-width: map-get($breakpoints, $lower)) and (max-width: calc(map-get($breakpoints, $upper) - 1px)) {
+  @if map.has-key($breakpoints, $lower) and map.has-key($breakpoints, $upper) {
+    @media (min-width: map.get($breakpoints, $lower)) and (max-width: calc(map.get($breakpoints, $upper) - 1px)) {
       @content;
     }
   }
