--- a/src/styles/utilities/_mixins.scss
+++ b/src/styles/utilities/_mixins.scss
@@ -1,3 +1,4 @@
+@use 'sass:list';
 @use '../base/spacing' as *;
 @use '../variables/borders' as *;
 @use '../variables/transitions' as *;
@@ -78,7 +79,7 @@
   $transitions: ();
 
   @each $property in $properties {
-    $transitions: append(
+    $transitions: list.append(
       $transitions,
       $property $transition-duration-base $transition-timing-ease-in-out,
       comma
